rolled back css added to fix the payer on small device

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5956,11 +5956,11 @@ section.block.block-facetapi:first-child h2 {
 }
 // test to fix the player size for ios 
 
-#playerbase {
-    min-width: 940px;
-}
-video.jw-video {
-    height: 528px !important;
-    width: 940px !important;
-    transform: none!important;
-}
+// #playerbase {
+//     min-width: 940px;
+// }
+// video.jw-video {
+//     height: 528px !important;
+//     width: 940px !important;
+//     transform: none!important;
+// }
